[package]
name = "cat_shield"
version = "0.1.0"
edition = "2021"
description = "A cat-proof screen overlay that keeps your machine awake and blocks input"
authors = ["Tyler Earls"]
license = "MIT"
repository = "https://github.com/taearls/catshield"
keywords = ["macos", "utility", "screen-lock", "input-blocking"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSBezierPath", "NSColor", "NSEvent", "NSScreen", "NSView", "NSWindow", "NSWorkspace"] }
objc2-core-foundation = { version = "0.3", features = ["CFMachPort", "CFRunLoop", "CFString"] }
objc2-core-graphics = { version = "0.3", features = ["CGEvent", "CGEventTypes", "CGRemoteOperation"] }

[profile.release]
opt-level = 3
lto = true
